<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:id="@+id/btnStart"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:id="@+id/btnStop"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/radioGroupStorages">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/external"
                android:id="@+id/externalRB"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/internal"
                android:id="@+id/internalRB"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/internal_external"
                android:id="@+id/external_internalRB"
                android:enabled="false"
                android:visibility="gone" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
           android:id="@+id/externalFrag1"
        android:baselineAligned="false">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/externalFrag"
            android:layout_weight="1">
            </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/internalFrag"
            android:layout_weight="1">
        </FrameLayout>
        </LinearLayout>

</LinearLayout>